--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "\n",
     "raw = CSV.read(\"courses_and_GPA.csv\")\n",
     "(m,n) = size(raw)\n",
+    "\n",
     "\n",
     "courses = raw[:,1]\n",
     "gpa = convert(Matrix{Float64}, raw[:,2:n])\n",
@@ -20,7 +21,35 @@
     "soft_hard = [7,13,23,24,30,33,41,42]\n",
     "app = [8,9,14,15,17,18,22,27,28,29,32,35,]\n",
     "elect = [7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,41,42,43,40]\n",
+    "len = length(gpa)\n",
     ";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using JuMP, Cbc\n",
+    "\n",
+    "m = Model(with_optimizer(Cbc.Optimizer, logLevel = 0))\n",
+    "\n",
+    "@variable(m, x[1:len], Bin)  # whether or not a course is taken\n",
+    "\n",
+    "# Must satisfy degree requirements\n",
+    "@constraint(m, sum( x[add_math[i]] for i in 1:length(add_math) ) >= 2)\n",
+    "@constraint(m, sum( x[theory[i]] for i in 1:length(theory) ) >= 1)\n",
+    "@constraint(m, sum( x[soft_hard[i]] for i in 1:length(soft_hard) ) >= 2)\n",
+    "@constraint(m, sum( x[app[i]] for i in 1:length(app) ) >= 1)\n",
+    "@constraint(m, sum( x[elect[i]] for i in 1:length(elect) ) >= 2)\n",
+    "\n",
+    "# A class can not count for more than one degree requirement\n",
+    "\n",
+    "# Must satisfy prerequisite requirements\n",
+    "\n",
+    "# Maximize GPA\n",
+    "@objective(m, Max, sum(x[i]*gpa[i] for i in 1:len));"
    ]
   },
   {
