--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,6 @@
     "\n",
     "raw = CSV.read(\"courses_and_GPA.csv\")\n",
     "(m,n) = size(raw)\n",
-    "\n",
     "\n",
     "courses = raw[:,1]\n",
     "gpa = convert(Matrix{Float64}, raw[:,2:n])\n",
@@ -21,35 +20,116 @@
     "soft_hard = [7,13,23,24,30,33,41,42]\n",
     "app = [8,9,14,15,17,18,22,27,28,29,32,35,]\n",
     "elect = [7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,41,42,43,40]\n",
-    "len = length(gpa)\n",
     ";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "73-element Array{VariableRef,1}:\n",
+       " z[1] \n",
+       " z[2] \n",
+       " z[3] \n",
+       " z[4] \n",
+       " z[5] \n",
+       " z[6] \n",
+       " z[7] \n",
+       " z[8] \n",
+       " z[9] \n",
+       " z[10]\n",
+       " z[11]\n",
+       " z[12]\n",
+       " z[13]\n",
+       " ⋮    \n",
+       " z[62]\n",
+       " z[63]\n",
+       " z[64]\n",
+       " z[65]\n",
+       " z[66]\n",
+       " z[67]\n",
+       " z[68]\n",
+       " z[69]\n",
+       " z[70]\n",
+       " z[71]\n",
+       " z[72]\n",
+       " z[73]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using JuMP, Cbc\n",
     "\n",
-    "m = Model(with_optimizer(Cbc.Optimizer, logLevel = 0))\n",
+    "m = Model(with_optimizer(Cbc.Optimizer))\n",
+    "@variable(m, z[1:73] , Bin)\n",
     "\n",
-    "@variable(m, x[1:len], Bin)  # whether or not a course is taken\n",
+    "#need to satisfy the requirements\n",
+    "@constraint(m, sum(z[i] for i in add_math) >= 2) \n",
+    "@constraint(m, sum(z[i] for i in theory) >= 1) \n",
+    "@constraint(m, sum(z[i] for i in soft_hard) >= 2)\n",
+    "@constraint(m, sum(z[i] for i in app) >= 1)\n",
+    "@constraint(m, sum(z[i] for i in elect) >= 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the CBC MILP Solver \n",
+      "Version: 2.10.3 \n",
+      "Build Date: Oct  7 2019 \n",
+      "\n",
+      "command line - Cbc_C_Interface -solve -quit (default strategy 1)\n",
+      "Continuous objective value is 231.473 - 0.00 seconds\n",
+      "Cgl0004I processed model has 0 rows, 0 columns (0 integer (0 of which binary)) and 0 elements\n",
+      "Cbc3007W No integer variables - nothing to do\n",
+      "Cuts at root node changed objective from -231.473 to -1.79769e+308\n",
+      "Probing was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Gomory was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Knapsack was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "Clique was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "MixedIntegerRounding2 was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "FlowCover was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "TwoMirCuts was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "ZeroHalf was tried 0 times and created 0 cuts of which 0 were active after adding rounds of cuts (0.000 seconds)\n",
+      "\n",
+      "Result - Optimal solution found\n",
+      "\n",
+      "Objective value:                231.47336338\n",
+      "Enumerated nodes:               0\n",
+      "Total iterations:               0\n",
+      "Time (CPU seconds):             0.01\n",
+      "Time (Wallclock seconds):       0.02\n",
+      "\n",
+      "Total time (CPU seconds):       0.01   (Wallclock seconds):       0.03\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#prerequistes need to be taken in advance\n",
+    "for i in 1:73\n",
+    "    for j in pre[i]\n",
+    "        @constraint(m, z[i] <= z[j])\n",
+    "    end\n",
+    "end\n",
     "\n",
-    "# Must satisfy degree requirements\n",
-    "@constraint(m, sum( x[add_math[i]] for i in 1:length(add_math) ) >= 2)\n",
-    "@constraint(m, sum( x[theory[i]] for i in 1:length(theory) ) >= 1)\n",
-    "@constraint(m, sum( x[soft_hard[i]] for i in 1:length(soft_hard) ) >= 2)\n",
-    "@constraint(m, sum( x[app[i]] for i in 1:length(app) ) >= 1)\n",
-    "@constraint(m, sum( x[elect[i]] for i in 1:length(elect) ) >= 2)\n",
+    "@objective(m, Max, sum(z[i]*gpa[i] for i in 1:73))\n",
     "\n",
-    "# A class can not count for more than one degree requirement\n",
-    "\n",
-    "# Must satisfy prerequisite requirements\n",
-    "\n",
-    "# Maximize GPA\n",
-    "@objective(m, Max, sum(x[i]*gpa[i] for i in 1:len));"
+    "optimize!(m)"
    ]
   },
   {
