--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -127,7 +127,10 @@
     "    end\n",
     "end\n",
     "\n",
-    "@objective(m, Max, sum(z[i]*gpa[i] for i in 1:73))\n",
+    "#one course cannot satisfy for multiple requirements\n",
+    "\n",
+    "\n",
+    "@objective(m, Max, sum(z[i]*gpa[i] for i in 1:73))#need to divide by number of courses taken\n",
     "\n",
     "optimize!(m)"
    ]
