--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -20,6 +20,7 @@
     "soft_hard = [7,13,23,24,30,33,41,42]\n",
     "app = [8,9,14,15,17,18,22,27,28,29,32,35,]\n",
     "elect = [7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,41,42,43,40]\n",
+    "len = length(gpa)\n",
     ";"
    ]
   },
@@ -29,15 +30,18 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: len not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: len not defined",
-      "",
-      "Stacktrace:",
-      " [1] macro expansion at /Users/Peter/.julia/packages/JuMP/MsUSY/src/macros.jl:189 [inlined]",
-      " [2] top-level scope at ./In[2]:4"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COMP SCI 407\n",
+      "COMP SCI 506\n",
+      "COMP SCI 545\n",
+      "COMP SCI 577\n",
+      "COMP SCI 579\n",
+      "COMP SCI 679\n",
+      "MATH 443\n",
+      "STAT 312\n",
+      "3.5399174268749998\n"
      ]
     }
    ],
