--- a/project_code_zhiwen.ipynb
+++ b/project_code_zhiwen.ipynb
@@ -26,39 +26,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "COMP SCI 252\n",
       "COMP SCI 300\n",
-      "COMP SCI 354\n",
       "COMP SCI 400\n",
       "COMP SCI 407\n",
       "COMP SCI 506\n",
-      "COMP SCI 536\n",
-      "COMP SCI 545\n",
-      "COMP SCI 547\n",
+      "COMP SCI 534\n",
       "COMP SCI 558\n",
       "COMP SCI 559\n",
-      "COMP SCI 564\n",
       "COMP SCI 577\n",
       "COMP SCI 579\n",
       "COMP SCI 639\n",
       "COMP SCI 679\n",
       "MATH 234\n",
-      "MATH 461\n",
+      "MATH 375\n",
+      "MATH 376\n",
       "MATH 222\n",
       "MATH 240\n",
-      "3.3304144917\n"
+      "2.6498694114499997\n"
      ]
     }
    ],
    "source": [
     "using JuMP, Cbc\n",
+    "\n",
+    "NUM_COURSES = 16\n",
     "\n",
     "m = Model(with_optimizer(Cbc.Optimizer, logLevel = 0))\n",
     "\n",
@@ -72,7 +70,7 @@
     "@constraint(m, sum( x[elect[i]] for i in 1:length(elect) ) >= 2)\n",
     "\n",
     "# A class can not count for more than one degree requirement\n",
-    "@constraint(m, sum( x[i] for i in 1:len ) == 20)\n",
+    "@constraint(m, sum( x[i] for i in 1:len ) == NUM_COURSES)\n",
     "\n",
     "# Must satisfy prerequisite requirements\n",
     "for i in 1:len\n",
@@ -82,7 +80,7 @@
     "end\n",
     "\n",
     "# Maximize GPA\n",
-    "@objective(m, Max, sum(x[i]*gpa[i] for i in 1:len) / 20);\n",
+    "@objective(m, Max, sum(x[i]*gpa[i] for i in 1:len) / NUM_COURSES);\n",
     "\n",
     "optimize!(m)\n",
     "\n",
