pre-req constraint should be equal sign

--- a/project_report_final.ipynb
+++ b/project_report_final.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "Datasets are from..\n",
     "\n",
-    "First consider decision variable-classes. Let $x$ be the class index vector of possible classes listed from table below. So the length of $x$ is 73, and $x_i=1$ when the class is taken, $x_i=0$ when the class is not taken.\n",
+    "First consider decision variable-classes. Let $x$ be the class index vector of possible classes listed from the class table. So the length of $x$ is 73, and $x_i=1$ when the class is taken, $x_i=0$ when the class is not taken.\n",
     "\n",
     "Now consider graduation requirement contraint. Let the below variables be catagory vectors of length of vector $x$. These vectors model the catogories of classes required for graduation.\n",
     "    - basic_cs\n",
@@ -117,7 +117,7 @@
     "    - soft_hard \n",
     "    - app \n",
     "    - elect \n",
-    "The vectors above at index $i$ equals to $1$ whenever class $x_i$ belongs to the that catagory vector, $0$ whenever the class $x_i$ does not belong to that catagory vector. As shown in table below\n",
+    "The vectors above at index $i$ equals to $1$ whenever class at $x_i$ belongs to the that catagory vector, $0$ whenever the class at $x_i$ does not belong to that catagory vector. As shown in table below\n",
     "\n",
     "We denote operation $(a, b)$ as the inner product of $a$ and $b$. So our graduation constraints are:\n",
     "    $$(basic\\_cs, x) = 5,$$\n",
@@ -132,7 +132,7 @@
     "$P_{i,j}=1$ when a class at index $i$ has a class of index $j$ as their pre-requisite, otherwise, $P_{i,j}=0$. \n",
     "\n",
     "So our course pre-requisite constraint is:\n",
-    "    $$\\sum_{i=1}^{n}(P, x) \\geq \\sum_{i=1}^{n}\\sum_{j=1}^{73}P_{i,j}$$\n"
+    "    $$\\sum_{i=1}^{n}(P, x) = \\sum_{i=1}^{n}\\sum_{j=1}^{73}P_{i,j}$$\n"
    ]
   },
   {
