--- a/project_report_final.ipynb
+++ b/project_report_final.ipynb
@@ -110,13 +110,13 @@
     "First consider decision variable-classes. Let $x$ be the class index vector of possible classes listed from the class table. So the length of $x$ is 73, and $x_i=1$ when the class is taken, $x_i=0$ when the class is not taken.\n",
     "\n",
     "Now consider graduation requirement contraint. Let the below variables be catagory vectors of length of vector $x$. These vectors model the catogories of classes required for graduation.\n",
-    "    - basic_cs\n",
-    "    - basic_math \n",
-    "    - add_math \n",
-    "    - theory \n",
-    "    - soft_hard \n",
-    "    - app \n",
-    "    - elect \n",
+    "    $$ basic\\_cs $$\n",
+    "    $$ basic\\_math $$\n",
+    "    $$ add\\_math $$\n",
+    "    $$ theory $$\n",
+    "    $$ soft\\_hard $$\n",
+    "    $$ app $$\n",
+    "    $$ elect $$\n",
     "The vectors above at index $i$ equals to $1$ whenever class at $x_i$ belongs to the that catagory vector, $0$ whenever the class at $x_i$ does not belong to that catagory vector. As shown in table below\n",
     "\n",
     "We denote operation $(a, b)$ as the inner product of $a$ and $b$. So our graduation constraints are:\n",
@@ -128,11 +128,13 @@
     "    $$(app , x) \\geq 1,$$\n",
     "    $$(elect , x) \\geq 2.$$\n",
     "    \n",
-    "Now consider course pre-requisite constraint. Let pre-requisite matrix $P \\in {\\rm I\\!R}^{n,73}$ where $n$ is the maximum number of pre-requisites a class can have. In this case we found $n=3$. And in the future should one changes $n$, nothing else in our mathematical model should be affected.\n",
-    "$P_{i,j}=1$ when a class at index $i$ has a class of index $j$ as their pre-requisite, otherwise, $P_{i,j}=0$. \n",
+    "Now consider course pre-requisite constraint. Let pre-requisite matrix $P \\in {\\rm I\\!R}^{73,73}$ where $P_{i,j}=1$ if class of index $j$ is a prerequisite for class of index $i$. We define that $P_{i,j}=1$ if class at index $i$ does not have any prerequisite requirement, and that $P_{i,j}=0$ does have a pre-requisite. \n",
+    "Define vector $v:=(P, x)$, so the result of $v$ gives us the information if the pre-requisite is met for a certain class of index $k$: if pre-requisite of class at index $k$ is met (even if that class does not include any pre-requisite), then $v_k = 1$, otherwise $v_k = 0$.\n",
     "\n",
-    "So our course pre-requisite constraint is:\n",
-    "    $$\\sum_{i=1}^{n}(P, x) = \\sum_{i=1}^{n}\\sum_{j=1}^{73}P_{i,j}$$\n"
+    "If we do not consider the order of classes taken (or the timetable which a class of pre-requisite of another must be taken before that other class), then the resulting mathematical constraint is:\n",
+    "$$v - x = (P, x) - x = 0$$\n",
+    "\n",
+    "If we do take into account of classes taken "
    ]
   },
   {
