--- a/project_code_don.ipynb
+++ b/project_code_don.ipynb
@@ -321,7 +321,7 @@
     "@constraint(m, elect1'*x >= 2)\n",
     "\n",
     "\n",
-    "# semester course load preference (except for 1st semester)\n",
+    "# 1st semester course load preference\n",
     "@constraint(m, sum(x[1:73]) <= SEM_COURSES_UP) # upper bound\n",
     "@constraint(m, sum(x[1:73]) >= SEM_COURSES_LO) # lower bound\n",
     "\n",
@@ -465,24 +465,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "73"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "JuMP.value(x[1])\n",
-    "classnum"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
