small edits to the intro

--- a/project_report_final.ipynb
+++ b/project_report_final.ipynb
@@ -65,11 +65,15 @@
    "source": [
     "## 1. Introduction ##\n",
     "\n",
-    "This project looks for an algorithm to best serve the students during their undergraduate planning at the Computer Science Department at the University of Wisconsin-Madison. The algorithm should provide students with the best schedule, insights of different course types and what careers these courses can lead them into.\n",
+    "This project develops an algorithm to help students in the University of Wisconsin-Madison Computer Sciences department develop an optimal schedule based on their interests. In addition to providing their optimal schedule, the algorithm will provide insights into different course types as well as what careers these courses can lead them into. For example, courses in computer archetecture may lend someone different career options than courses in information security.\n",
     "\n",
-    "The algorithm takes into account of course pre-requesites, student's areas of interests within computer science, courses' diffiulties (Average GPA), areas of pursuits (industrial or academic). Furthermore, this project explores the Correlation between weights of areas of interests, grades, and area of pursuits. \n",
+    "The algorithm takes into account course pre-requesites, students' areas of interest within computer science, courses' diffiulties (Average GPA), as well as areas of pursuits (industrial or academic). Furthermore, this project explores the trade-off between weights of areas of interests, grades, and area of pursuits in finding each student's optimal schedule. \n",
     "\n",
-    "The purposes for this project is to 1. look for an algorithm to best serve the students as they go through a computer science program; 2. give Computer Science programs across the country ways to analysize the fit for their program in the industry and / or the academia' 3. give advisors of Computer Science programs better insights to better serve their undergraduate students 4. provide social scientists and other social, administrative, political workers insights of computer science trends within American Higher Education. \n",
+    "The purposes of this project are to:  \n",
+    "1. look for an algorithm to best serve the students as they go through a computer science program  \n",
+    "2. give Computer Science programs across the country ways to analysize the fit for their program in industry and / or academia  \n",
+    "3. give advisors of Computer Science programs better insights to better serve their undergraduate students  \n",
+    "4. provide social scientists and other social, administrative, political workers insights of computer science trends within American Higher Education. \n",
     "\n",
     "This project does not take into account of any statistical samples. This project solely looks for an algorithm to solve the optimization problem. See Future Work and Application in section 4 for how this algorithms can be applied."
    ]
