fixed a bit pre-req array

--- a/project_code_don.ipynb
+++ b/project_code_don.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -30,14 +30,14 @@
        " 0  0  0  0  0  0  0  0  0  0  0  0  0  …  0  0  1  0  0  0  0  0  0  0  0  0\n",
        " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  0  0  0  0  0  0\n",
        " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  1  0  0  0  0  0\n",
-       " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  0  0  0  0  0  0\n",
+       " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  1  0  0  0  0  0\n",
        " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  0  0  1  0  0  0\n",
        " 0  0  0  0  0  0  0  0  0  0  0  0  0  …  0  0  0  0  0  0  0  0  0  0  0  0\n",
        " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  0  0  0  0  0  0\n",
        " 0  0  0  0  0  0  0  0  0  0  0  0  0     0  0  0  0  0  0  1  0  0  0  0  0"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
     "    [3,51],[51],[18,3],[69,1],[45,51],[3,69],[5,6],[5,6],[5,6],[1],[3,68],[23],[47,3,5],[4,5],\n",
     "    [6,47],[69,6],[5,6],[55,73],[1],[3,69],[70,6],[0],[3,51],[0],[24],[24],[32],[0],[44],[44],\n",
     "    [69],[47],[71,73],[69],[69],[58],[52],[47],[69],[47],[0],[57],[47],[47],[51],[47],[53],[56,57],\n",
-    "    [64],[64],[56],[0],[69],[0],[47],[48],[68]]                                 \n",
+    "    [64],[64],[56],[0],[68],[0],[47],[48],[68]]                                 \n",
     "\n",
     "# create P (pre-requisite matrix as in Write Up)\n",
     "# so that can use P*x to simplify stuff\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        " 0.0"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        " 3.157733538"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +222,8 @@
    "source": [
     "# integer params to change\n",
     "TOT_COURSES_UP = 40  # total courses upper bound\n",
-    "TOT_COURSES_LO = 30  # total courses lower bound\n",
-    "SEM_COURSES_UP = 5  # semester courses upper bound\n",
+    "TOT_COURSES_LO = 20  # total courses lower bound\n",
+    "SEM_COURSES_UP = 4  # semester courses upper bound\n",
     "SEM_COURSES_LO = 1  # semester courses lower bound\n",
     "NUM_SEMESTER = 8  # int (max semesters)\n",
     "\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -266,8 +266,8 @@
       "Academic license - for non-commercial use only\r\n",
       "Academic license - for non-commercial use only\r\n",
       "Gurobi Optimizer version 9.0.1 build v9.0.1rc0 (win64)\r\n",
-      "Optimize a model with 538 rows, 584 columns and 5129 nonzeros\r\n",
-      "Model fingerprint: 0xae6467ac\r\n",
+      "Optimize a model with 541 rows, 584 columns and 5153 nonzeros\r\n",
+      "Model fingerprint: 0x83c2b2fb\r\n",
       "Model has 7 quadratic constraints\r\n",
       "Variable types: 0 continuous, 584 integer (584 binary)\r\n",
       "Coefficient statistics:\r\n",
@@ -276,28 +276,30 @@
       "  Objective range  [2e+00, 4e+00]\r\n",
       "  Bounds range     [0e+00, 0e+00]\r\n",
       "  RHS range        [1e+00, 4e+01]\r\n",
-      "Presolve removed 314 rows and 261 columns\r\n",
+      "Presolve removed 236 rows and 169 columns\r\n",
       "Presolve time: 0.02s\r\n",
-      "Presolved: 224 rows, 323 columns, 2556 nonzeros\r\n",
-      "Variable types: 0 continuous, 323 integer (323 binary)\r\n",
-      "Found heuristic solution: objective 131.0311757\r\n",
+      "Presolved: 305 rows, 415 columns, 3417 nonzeros\r\n",
+      "Variable types: 0 continuous, 415 integer (415 binary)\r\n",
+      "Found heuristic solution: objective 106.0221885\r\n",
       "\r\n",
-      "Root relaxation: objective 1.323108e+02, 229 iterations, 0.00 seconds\r\n",
+      "Root relaxation: objective 1.075490e+02, 244 iterations, 0.01 seconds\r\n",
       "\r\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\r\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\r\n",
       "\r\n",
-      "     0     0  132.31084    0   40  131.03118  132.31084  0.98%     -    0s\r\n",
-      "H    0     0                     131.8791810  132.31084  0.33%     -    0s\r\n",
-      "     0     2  132.31084    0   39  131.87918  132.31084  0.33%     -    0s\r\n",
+      "     0     0  107.54900    0   51  106.02219  107.54900  1.44%     -    0s\r\n",
+      "H    0     0                     106.7644335  107.54900  0.73%     -    0s\r\n",
+      "H    0     0                     106.9527404  107.54900  0.56%     -    0s\r\n",
+      "     0     2  107.54900    0   51  106.95274  107.54900  0.56%     -    0s\r\n",
+      "H    9     8                     106.9871503  107.41072  0.40%  15.6    0s\r\n",
       "\r\n",
-      "Explored 327 nodes (2239 simplex iterations) in 0.21 seconds\r\n",
+      "Explored 476 nodes (2697 simplex iterations) in 0.34 seconds\r\n",
       "Thread count was 4 (of 4 available processors)\r\n",
       "\r\n",
-      "Solution count 2: 131.879 131.031 \r\n",
+      "Solution count 4: 106.987 106.953 106.764 106.022 \r\n",
       "\r\n",
       "Optimal solution found (tolerance 1.00e-04)\r\n",
-      "Best objective 1.318791809630e+02, best bound 1.318791809630e+02, gap 0.0000%\r\n"
+      "Best objective 1.069871502620e+02, best bound 1.069871502620e+02, gap 0.0000%\r\n"
      ]
     }
    ],
@@ -312,8 +314,8 @@
     "@variable(m, x[1:len*NUM_SEMESTER], Bin)  # create a 73 * 8 (semester number) course list\n",
     "\n",
     "# basic catogorical course requirement\n",
-    "@constraint(m, basic_cs1'*x >= 5)\n",
-    "@constraint(m, basic_math1'*x >= 2)\n",
+    "@constraint(m, basic_cs1'*x >= 5)  # why were they == 5 before? \n",
+    "@constraint(m, basic_math1'*x >= 2) # why were they == 2 before? \n",
     "@constraint(m, add_math1'*x >= 2)\n",
     "@constraint(m, theory1'*x >= 1)\n",
     "@constraint(m, soft_hard1'*x >= 2)\n",
@@ -346,8 +348,15 @@
     "@constraint(m, sum(x[i] for i in 1:len*NUM_SEMESTER) >= TOT_COURSES_LO) # lower bound\n",
     "\n",
     "# starting course preference\n",
-    "@constraint(m, x[2] == 1)\n",
-    "@constraint(m, x[3] == 1)\n",
+    "@constraint(m, x[2] == 1)  # must take CS 252 first semester\n",
+    "@constraint(m, x[3] == 1)  # must take CS 300 first semester\n",
+    "# class at x[142] is math 222 in second semester\n",
+    "# so I am setting constraint that math 222 must\n",
+    "# be taken in the second semester\n",
+    "# note you cant set math 222 to first semester since it has math 221\n",
+    "# as a pre-req, and you will get an unbounded solution\n",
+    "@constraint(m, x[142] == 1) # 142 = 69+tot_classes(73)\n",
+    "\n",
     "\n",
     "# Maximize GPA\n",
     "@objective(m, Max, (gpa1'*x)[1]);\n",
@@ -360,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -372,68 +381,60 @@
       "=======================\n",
       "Starting Semester 1\n",
       "=======================\n",
-      "COMP SCI 200 - 2.8\n",
       "COMP SCI 252 - 3.3\n",
       "COMP SCI 300 - 3.2\n",
-      "ECE 203 - 3.1\n",
       "MATH 375 - 3.3\n",
+      "MATH 221 - 2.8\n",
       "=======================\n",
       "Starting Semester 2\n",
       "=======================\n",
       "COMP SCI 354 - 3.1\n",
       "COMP SCI 400 - 3.3\n",
-      "COMP SCI 407 - 3.6\n",
-      "COMP SCI 579 - 3.9\n",
-      "MATH 376 - 3.3\n",
+      "COMP SCI 639 - 3.4\n",
+      "MATH 222 - 2.8\n",
       "=======================\n",
       "Starting Semester 3\n",
       "=======================\n",
-      "COMP SCI 506 - 3.5\n",
+      "COMP SCI 407 - 3.6\n",
+      "COMP SCI 534 - 3.3\n",
       "COMP SCI 536 - 3.2\n",
-      "COMP SCI 537 - 3.4\n",
-      "COMP SCI 539 - 3.1\n",
-      "COMP SCI 570 - 3.6\n",
+      "MATH 320 - 2.8\n",
       "=======================\n",
       "Starting Semester 4\n",
       "=======================\n",
-      "COMP SCI 545 - 3.8\n",
+      "COMP SCI 537 - 3.4\n",
       "COMP SCI 547 - 3.6\n",
-      "COMP SCI 577 - 3.1\n",
-      "COMP SCI 639 - 3.4\n",
-      "MATH 221 - 2.8\n",
+      "COMP SCI 576 - 3.3\n",
+      "MATH 443 - 3.4\n",
       "=======================\n",
       "Starting Semester 5\n",
       "=======================\n",
-      "COMP SCI 559 - 3.1\n",
-      "COMP SCI 640 - 3.3\n",
-      "COMP SCI 642 - 3.4\n",
-      "MATH 240 - 3.0\n",
-      "STAT 324 - 3.2\n",
+      "COMP SCI 506 - 3.5\n",
+      "COMP SCI 564 - 3.4\n",
+      "COMP SCI 635 - 3.5\n",
+      "MATH 376 - 3.3\n",
       "=======================\n",
       "Starting Semester 6\n",
       "=======================\n",
-      "COMP SCI 538 - 3.2\n",
-      "COMP SCI 564 - 3.4\n",
-      "COMP SCI 567 - 3.1\n",
-      "COMP SCI 679 - 3.7\n",
-      "MATH 310 - 3.0\n",
+      "COMP SCI 533 - 3.4\n",
+      "COMP SCI 545 - 3.8\n",
+      "COMP SCI 577 - 3.1\n",
+      "COMP SCI 642 - 3.4\n",
       "=======================\n",
       "Starting Semester 7\n",
       "=======================\n",
-      "COMP SCI 471 - 3.5\n",
-      "COMP SCI 514 - 3.1\n",
-      "COMP SCI 532 - 3.4\n",
-      "COMP SCI 540 - 3.1\n",
-      "COMP SCI 552 - 3.1\n",
+      "COMP SCI 524 - 3.3\n",
+      "COMP SCI 579 - 3.9\n",
+      "COMP SCI 640 - 3.3\n",
+      "MATH 240 - 3.0\n",
       "=======================\n",
       "Starting Semester 8\n",
       "=======================\n",
-      "COMP SCI 533 - 3.4\n",
+      "COMP SCI 471 - 3.5\n",
       "COMP SCI 558 - 3.7\n",
-      "COMP SCI 635 - 3.5\n",
-      "MATH 443 - 3.4\n",
-      "MATH 222 - 2.8\n",
-      "Overall Predicted GPA:[3.296979524075]\n"
+      "COMP SCI 570 - 3.6\n",
+      "COMP SCI 679 - 3.7\n",
+      "Overall Predicted GPA:[3.3433484456875]\n"
      ]
     }
    ],
