Finished the intro

--- a/project_report_final.ipynb
+++ b/project_report_final.ipynb
@@ -65,17 +65,22 @@
    "source": [
     "## 1. Introduction ##\n",
     "\n",
-    "This project develops an algorithm to help students in the University of Wisconsin-Madison Computer Sciences department develop an optimal schedule based on their interests. In addition to providing their optimal schedule, the algorithm will provide insights into different course types as well as what careers these courses can lead them into. For example, courses in computer archetecture may lend someone different career options than courses in information security.\n",
+    "This project develops an algorithm to help students in the University of Wisconsin-Madison Computer Sciences department develop an optimal schedule based on their interests. Users of the algorithm will be able to find a course list that satisfies all departmental degree requirements while maximizing the average GPA earned in each class, and they also have the option to find a  course list that satisfies all departmental degree requirements while maximizing the number of classes that focus on an area of Computer Sciences in which they are particularly interested. For example, a student can choose to focus on information security during their time in the Computer Sciences program, and the algorithm will give them a schedule with the maximum possible number of courses with that focus while still satisfying all degree requirements.\n",
     "\n",
-    "The algorithm takes into account course pre-requesites, students' areas of interest within computer science, courses' diffiulties (Average GPA), as well as areas of pursuits (industrial or academic). Furthermore, this project explores the trade-off between weights of areas of interests, grades, and area of pursuits in finding each student's optimal schedule. \n",
+    "The need for such a tool has been present for a long time. Every semester around course enrollment time, students spend hours searching each class, and trying to decide if they are interested in taking a class, and whether it will fit in their schedules. Some students are only interested in getting into the easiest classes, while others have specific interests that they would like to spend all of their class time learning about. \n",
+    "\n",
+    "Many students use the website [madgrades.com](madgrades.com) to look at the grade distribution of previous semesters of courses they want to take, and the dataset used by that website is all online in a relational database. Using this database, we wrote queries to extract every course that could fulfill any requirement for the Computer Sciences major, along with their corresponding average GPAs. In order to determine the prerequisites of each course, we manually curated a graph structure by reading off the [Computer Sciences webpage](https://guide.wisc.edu/undergraduate/letters-science/computer-sciences/computer-sciences-bs/#requirementstext).\n",
+    "\n",
+    "The algorithm takes into account course prerequisites, students' areas of interest within computer science, and course difficulty (Average GPA). Furthermore, this project explores the trade-off between areas of interests and average GPA to find each student's optimal schedule. \n",
     "\n",
     "The purposes of this project are to:  \n",
-    "1. look for an algorithm to best serve the students as they go through a computer science program  \n",
-    "2. give Computer Science programs across the country ways to analysize the fit for their program in industry and / or academia  \n",
-    "3. give advisors of Computer Science programs better insights to better serve their undergraduate students  \n",
-    "4. provide social scientists and other social, administrative, political workers insights of computer science trends within American Higher Education. \n",
+    "1. look for an algorithm to best serve the students as they go through the computer sciences program  \n",
+    "2. give advisors of the Computer Sciences program information to better serve their undergraduate students  \n",
+    "3. provide social scientists and other social, administrative, political workers insights of computer science trends within American Higher Education. \n",
     "\n",
-    "This project does not take into account of any statistical samples. This project solely looks for an algorithm to solve the optimization problem. See Future Work and Application in section 4 for how this algorithms can be applied."
+    "In this report, we will develop two models: the first will find the easiest path to degree, while the second will determine the optimal schedule given a specific area of interest. In the results section, we will list all the schedules we found, given each different area of interest.\n",
+    "\n",
+    "This project does not take into account of any statistical samples. This project solely looks for an algorithm to solve the optimization problem. See Future Work and Applications in section 4 for how this algorithms can be applied."
    ]
   },
   {
