Work on the results section

--- a/Preliminary_report.ipynb
+++ b/Preliminary_report.ipynb
@@ -222,6 +222,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The course schedule to maximize GPA is: \n",
+    "\n",
+    "COMP SCI 252, COMP SCI 300, COMP SCI 354, COMP SCI 400, COMP SCI 407, COMP SCI 506, COMP SCI 547, COMP SCI 558, COMP SCI 577, COMP SCI 579, MATH 234, MATH 461, MATH 221, MATH 222, MATH 240\n",
+    "\n",
+    "Using the prerequisite dependency relationships, a possibe 8-semester schedule for these courses is:\n",
+    "\n",
+    "| Semester | Course 1 | Course 2 |\n",
+    "|-------------|-------------|-----|\n",
+    "| 1 | COMP SCI 300 | MATH 221 |\n",
+    "| 2 | COMP SCI 400 | MATH 222 |\n",
+    "| 3 | COMP SCI 252 | MATH 240 |\n",
+    "| 4 | COMP SCI 354 | MATH 234 |\n",
+    "| 5 | COMP SCI 407 | COMP SCI 547 |\n",
+    "| 6 | COMP SCI 506 | MATH 461 |\n",
+    "| 7 | COMP SCI 558 | COMP SCI 579 |\n",
+    "| 8 | COMP SCI 577 |  |\n",
+    "\n",
+    "In our final submission, we plan to expand our model to calculate the optimal schedule based on area of interest. Courses will be categorized into the following disciplines:  \n",
+    "\n",
+    "Ai = Artificial Intelligence  \n",
+    "Ar = Computer Architecture  \n",
+    "Sy = Computer Systems  \n",
+    "Ap = Mobile Application Development  \n",
+    "Th = Theory and Algorithms  \n",
+    "Ec = Economics  \n",
+    "Ro = Robotics  \n",
+    "Da = Data Science  \n",
+    "Bi = Biomedical\n",
+    "Is = Information Security\n",
+    "\n",
+    "Users of this model will be able to choose one of the above disciplines, and recieve a courseload that maximizes the number of courses belonging to their chosen discipline."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
