--- a/project_report_Zhiwen.ipynb
+++ b/project_report_Zhiwen.ipynb
@@ -281,20 +281,13 @@
    "source": [
     "## 4. Results and discussion ##\n",
     "\n",
-    "### Model 1 ###\n",
-    "Here, you display and discuss the results. Show figures, plots, images, trade-off curves, or whatever else you can think of to best illustrate your results. The discussion should explain what the results mean, and how to interpret them. You should also explain the limitations of your approach/model and how sensitive your results are to the assumptions you made.\n",
+    "#### Discussion ####\n",
     "\n",
+    "Based on pre-requisite and graduation requirement, model 1 gives a CS student the easiest course load to graduate. The recommended list include some non-popular courses and the student can further explore on them. With the highest possible GPA in CS courses, the student may find it easier to look for jobs or apply for graduate programs. Avoiding the challenging courses, the student will also face less pressure during study. \n",
     "\n",
-    "### Model 2 ###\n",
+    "However, there are some limitations in this model. For example, course credit is not reflected in GPA calculation as each course is weighted equally, and therefore, the optimal GPA is not precise. However, if course credit is included, the model will turn into a complicated non-linear programming model, which can be hard to solve. Furthermore, the calculated optimal GPA will not lose too much precision since most courses have three or four credits. Therefore, course credit is left out of the model. A major limitation of this model is that some courses in the generated list are not useful and in reality, a student will not take them even if they boost GPA.\n",
     "\n",
-    "\n",
-    "| Semester      | Courses       | \n",
-    "| ------------- |:-------------:| \n",
-    "| 1             | right-aligned |\n",
-    "| 2             | centered      |  \n",
-    "| 3             | are neat      | \n",
-    "| 4             | are neat      | \n",
-    "| 5             | are neat      | \n"
+    "In the next steps, we plan to print the course list as a rough schedule so the student can better know how to take theses courses. We will also complete model 2 and compare it with model 1.\n"
    ]
   },
   {
